--- a/jmeter-commons/jmeter-core/pom.xml
+++ b/jmeter-commons/jmeter-core/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmeter-core</artifactId>
 
+    <properties>
+        <httpclient.version>4.5.5</httpclient.version>
+        <common-httpclient.version>3.1</common-httpclient.version>
+        <jsoup.version>1.11.3</jsoup.version>
+        <commons-collertions4>4.2</commons-collertions4>
+    </properties>
+
   <dependencies>
       <!-- Spring Web -->
       <dependency>
@@ -69,6 +76,32 @@
       <dependency>
           <groupId>javax.servlet</groupId>
           <artifactId>javax.servlet-api</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+          <version>30.0-jre</version>
+      </dependency>
+
+      <dependency>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-collections4</artifactId>
+          <version>${commons-collertions4}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>${httpclient.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>commons-httpclient</groupId>
+          <artifactId>commons-httpclient</artifactId>
+          <version>${common-httpclient.version}</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jsoup</groupId>
+          <artifactId>jsoup</artifactId>
+          <version>${jsoup.version}</version>
       </dependency>
   </dependencies>
 
