--- a/jmeter-job/pom.xml
+++ b/jmeter-job/pom.xml
@@ -8,8 +8,24 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>jmeter-job</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lzh.jmeter</groupId>
+            <artifactId>jmeter-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lzh.jmeter</groupId>
+            <artifactId>jmeter-log</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lzh.jmeter</groupId>
+            <artifactId>jmeter-task</artifactId>
+        </dependency>
+    </dependencies>
 </project>
