--- a/jmeter-system/pom.xml
+++ b/jmeter-system/pom.xml
@@ -25,6 +25,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.lzh.jmeter</groupId>
             <artifactId>jmeter-redis</artifactId>
         </dependency>
@@ -41,6 +46,10 @@
         <dependency>
             <groupId>com.lzh.jmeter</groupId>
             <artifactId>jmeter-datasource</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
         </dependency>
     </dependencies>
 
