--- a/jmeter-system/jmeter-system-api/pom.xml
+++ b/jmeter-system/jmeter-system-api/pom.xml
@@ -3,15 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jmeter-pro</artifactId>
+        <artifactId>jmeter-system</artifactId>
         <groupId>com.lzh.jmeter</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jmeter-system</artifactId>
+    <artifactId>jmeter-system-api</artifactId>
 
-    <modules>
-        <module>jmeter-system-api</module>
-        <module>jmeter-system-main</module>
-    </modules>
+    <dependencies>
+        <dependency>
+            <groupId>com.lzh.jmeter</groupId>
+            <artifactId>jmeter-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
