--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,12 @@
         <okhttp.version>3.6.0</okhttp.version>
         <shiro-spring.version>1.4.0</shiro-spring.version>
         <shiro-redis.version>3.1.0</shiro-redis.version>
+        <dubbo.version>2.7.7</dubbo.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- SpringBoot 依赖配置 -->
+            <!-- SpringBoot父依赖 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
@@ -40,6 +41,35 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- Apache Dubbo  -->
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo-dependencies-bom</artifactId>
+                <version>${dubbo.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.dubbo</groupId>
+                <artifactId>dubbo</artifactId>
+                <version>${dubbo.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
             <!-- Mybatis 依赖配置 -->
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
@@ -162,6 +192,12 @@
             <dependency>
                 <groupId>com.lzh.jmeter</groupId>
                 <artifactId>jmeter-log</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.lzh.jmeter</groupId>
+                <artifactId>jmeter-system-api</artifactId>
                 <version>1.0.0</version>
             </dependency>
         </dependencies>
