--- a/jmeter-commons/jmeter-core/pom.xml
+++ b/jmeter-commons/jmeter-core/pom.xml
@@ -103,6 +103,10 @@
           <artifactId>jsoup</artifactId>
           <version>${jsoup.version}</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-core</artifactId>
+      </dependency>
   </dependencies>
 
 </project>
