--- a/jmeter-commons/jmeter-security/pom.xml
+++ b/jmeter-commons/jmeter-security/pom.xml
@@ -8,12 +8,22 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jmeter-log</artifactId>
+
+    <artifactId>jmeter-security</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.lzh.jmeter</groupId>
-            <artifactId>jmeter-security</artifactId>
-            <version>1.0.0</version>
+            <artifactId>jmeter-system-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.lzh.jmeter</groupId>
+            <artifactId>jmeter-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
     </dependencies>
+
 </project>
