--- a/jmeter-web/pom.xml
+++ b/jmeter-web/pom.xml
@@ -3,26 +3,34 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>jmeter-system</artifactId>
+        <artifactId>jmeter-pro</artifactId>
         <groupId>com.lzh.jmeter</groupId>
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>jmeter-system-main</artifactId>
+    <artifactId>jmeter-web</artifactId>
 
     <dependencies>
-    <dependency>
-            <groupId>com.lzh.jmeter</groupId>
-            <artifactId>jmeter-core</artifactId>
-        </dependency>
         <dependency>
             <groupId>com.lzh.jmeter</groupId>
             <artifactId>jmeter-system-api</artifactId>
         </dependency>
         <dependency>
             <groupId>com.lzh.jmeter</groupId>
-            <artifactId>jmeter-datasource</artifactId>
+            <artifactId>jmeter-log</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <!-- 移除springboot本身的logback依赖 -->
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-logging</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -68,23 +76,5 @@
             <optional>true</optional>
         </dependency>
     </dependencies>
-    <build>
-        <finalName>${project.artifactId}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+
 </project>
