--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,12 @@
         <module>jmeter-commons</module>
         <module>jmeter-system</module>
         <module>jmeter-job</module>
-        <module>jmeter-web</module>
+        <module>jmeter-business</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
         <spring-boot.version>2.3.7.RELEASE</spring-boot.version>
         <pagehelper.boot.version>1.3.0</pagehelper.boot.version>
         <commons.io.version>2.5</commons.io.version>
@@ -196,27 +197,38 @@
                 <artifactId>jmeter-system-api</artifactId>
                 <version>1.0.0</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.lzh.jmeter</groupId>
+                <artifactId>jmeter-security</artifactId>
+                <version>1.0.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <distributionManagement>
+        <repository>
+            <id>360buy-central</id>
+            <name>libs-releases-local</name>
+            <url>http://artifactory.jd.com/libs-releases-local</url>
+        </repository>
+        <snapshotRepository>
+            <id>360buy-snapshots</id>
+            <name>libs-snapshot-local</name>
+            <url>http://artifactory.jd.com/libs-snapshots-local</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
