--- a/jmeter-commons/jmeter-redis/pom.xml
+++ b/jmeter-commons/jmeter-redis/pom.xml
@@ -9,6 +9,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmeter-redis</artifactId>
+    <packaging>jar</packaging>
+
     <dependencies>
         <!--redis spring依赖-->
         <dependency>
