--- a/jmeter-system/jmeter-system-api/pom.xml
+++ b/jmeter-system/jmeter-system-api/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jmeter-system-api</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
