--- a/jmeter-commons/jmeter-core/pom.xml
+++ b/jmeter-commons/jmeter-core/pom.xml
@@ -31,6 +31,12 @@
           <artifactId>commons-pool2</artifactId>
       </dependency>
 
+      <dependency>
+          <groupId>io.jsonwebtoken</groupId>
+          <artifactId>jjwt</artifactId>
+          <version>0.9.0</version>
+      </dependency>
+
       <!-- Pagehelper -->
       <dependency>
           <groupId>com.github.pagehelper</groupId>
