--- a/jmeter-commons/jmeter-core/pom.xml
+++ b/jmeter-commons/jmeter-core/pom.xml
@@ -114,6 +114,11 @@
           <groupId>org.springframework.security</groupId>
           <artifactId>spring-security-core</artifactId>
       </dependency>
+      <dependency>
+          <groupId>commons-beanutils</groupId>
+          <artifactId>commons-beanutils</artifactId>
+          <version>1.9.4</version>
+      </dependency>
   </dependencies>
 
 </project>
