--- a/jmeter-commons/jmeter-security/pom.xml
+++ b/jmeter-commons/jmeter-security/pom.xml
@@ -8,10 +8,14 @@
         <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>jmeter-security</artifactId>
 
     <dependencies>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
         <dependency>
             <groupId>com.lzh.jmeter</groupId>
             <artifactId>jmeter-system-api</artifactId>
@@ -32,7 +36,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
