过滤URL配置化

--- a/jmeter-business/src/main/resources/application.yml
+++ b/jmeter-business/src/main/resources/application.yml
@@ -39,3 +39,6 @@ dubbo:
 mybatis:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+config:
+  excludePath: /api/login,/api/register,/api/ui-script/list
