--- a/jmeter-business/pom.xml
+++ b/jmeter-business/pom.xml
@@ -16,5 +16,20 @@
             <groupId>com.lzh.jmeter</groupId>
             <artifactId>jmeter-log</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.141.59</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.1.0</version>
+        </dependency>
     </dependencies>
 </project>
